@@ -1,3 +1,8 @@
+2025-05-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test29-start-file-process)
+	(tramp-test30-make-process): Adapt tests.
+
 2025-05-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp--test-split-on-boundary)
